--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,10 @@ addons:
 #       build configuration       #
 #---------------------------------#
 
+before_install:
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-engine
+
 install:
   - docker pull microsoft/aspnetcore-build:1.0-1.1
   - docker pull microsoft/aspnetcore:1.1
