--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ script:
   - docker-compose -f docker-compose.build.yml -p netcorebuild run ci-build
   - docker-compose -f docker-compose.yml -p webui build
   - docker-compose -f docker-compose.yml -p webui up -d
+  - sleep 30
   - docker ps
   - docker logs webui
   - curl http://webui.io:5000
